refactor: TourAPI 숙소 데이터 파싱 로직 개선 및 null 허용 처리 적용